--- a/src/templates/index.html.tmpl
+++ b/src/templates/index.html.tmpl
@@ -2,19 +2,26 @@
 <html>
     <head>
         <title>
-            App Test
+            Rancher Government - Istio Demo
         </title>
+        <link rel="shortcut icon" type="image/jpg" href="static/img/favicon.png"/>
         <link rel="stylesheet" href="static/css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link red="stylsheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     </head>
     <body>
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="static/img/logo-head.png" alt="">
+            </a>
+        </nav>
         <div class="centered">
             <div>
-                <div id="app3" class="box cloud"></div>
+                <div id="app3" class="box_middle cloud"></div>
             </div>
             <div>
-                <div id="app1" class="box app">App1</div>
-                <div id="app2" class="box app">App2</div>
+                <div id="app1" class="box_left app">App1</div>
+                <div id="app2" class="box_right app">App2</div>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
