Uncomment auth token

--- a/src/templates/index.html.tmpl
+++ b/src/templates/index.html.tmpl
@@ -24,6 +24,11 @@
                 <div id="app2" class="box_right app">App2</div>
             </div>
         </div>
+        <footer class="footer">
+        <div class="container centered">
+            <span class="text-muted">&copy; 2022 Rancher Government Solutions. All rights reserved.</span>
+        </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
         <script src="static/js/main.js"></script>
     </body>
